--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <nav>
-        <a href="index.html">Home</a> |
-        <a href="projects/">Projects</a> |
-        <a href="contact/">Contact</a> |
-        <a href="../cv/">CV</a> |
+        <a href="../index.html" class="current">Home</a>
+        <a href="../projects/">Projects</a>
+        <a href="../contact/">Contact</a>
+        <a href="../cv/">CV</a>
         <a href="https://github.com/sulovewai19" target="_blank">GitHub</a>
     </nav>
+
    <h1>Su Love Wai</h1>
    <p>I’m Su Love Wai, a UC San Diego student majoring in Data Science with a minor in Finance. I’m interested in data-driven projects that connect business and technology.</p>
    <img src="images/myphoto.jpg" alt="Portrait of Su Love Wai" style="width:300px; border-radius:10px;">
