--- a/contact/index.html
+++ b/contact/index.html
@@ -8,35 +8,28 @@
 </head>
 <body>
   <nav>
-    <a href="../index.html">Home</a> |
-    <a href="../projects/">Projects</a> |
-    <a href="../contact/">Contact</a> |
-    <a href="../cv/">CV</a> |
-    <a href="https://github.com/sulovewai19" target="_blank">GitHub</a>
-  </nav>
+        <a href="../index.html" >Home</a>
+        <a href="../projects/">Projects</a>
+        <a href="../contact/" class="current">Contact</a>
+        <a href="../cv/">CV</a>
+        <a href="https://github.com/sulovewai19" target="_blank">GitHub</a>
+    </nav>
 
 <h1>Contact</h1>
 <p>You can reach me at <a href="mailto:lwai@ucsd.edu">lwai@ucsd.edu</a></p>
 
 <form action="mailto:lwai@ucsd.edu" method="POST" enctype="text/plain">
-  <label>
-    Email:
-    <input type="email" name="email" placeholder="Enter your email">
-  </label>
-  <br><br>
-  <label>
-    Subject:
-    <input name="subject" placeholder="Subject">
-  </label>
-  <br><br>
-  <label>
-    Body:
-    <textarea name="body" placeholder="Write your message"></textarea>
-  </label>
-  <br><br>
-  <button>Send</button>
-</form>
+  <label for="email">Email:</label>
+  <input id="email" type="email" name="email" placeholder="Enter your email" required>
 
+  <label for="subject">Subject:</label>
+  <input id="subject" name="subject" placeholder="Subject" required>
+
+  <label for="body">Body:</label>
+  <textarea id="body" name="body" placeholder="Write your message" rows="4" required></textarea>
+
+  <button type="submit">Send</button>
+</form>
 
 </body>
 </html>
