--- a/cv/index.html
+++ b/cv/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
   <nav>
-    <a href="../index.html">Home</a> |
-    <a href="../projects/">Projects</a> |
-    <a href="../contact/">Contact</a> |
-    <a href="../cv/">CV</a> |
+    <a href="../index.html">Home</a> 
+    <a href="../projects/">Projects</a> 
+    <a href="../contact/">Contact</a> 
+    <a href="../cv/" class="current">CV  </a> 
     <a href="https://github.com/sulovewai19" target="_blank">GitHub</a>
   </nav>
 
