Javascript: Nav Bar, Dark mode

--- a/projects/index.html
+++ b/projects/index.html
@@ -7,13 +7,7 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <nav>
-    <a href="../index.html">Home</a> 
-    <a href="../projects/" class="current">Projects</a> 
-    <a href="../contact/">Contact</a> 
-    <a href="../cv/">CV</a> 
-    <a href="https://github.com/sulovewai19" target="_blank">GitHub</a>
-  </nav>
+  
 
   <h1>Projects</h1>
 <p>Here you will find some of my projects in data science, finance, and web development.</p>
@@ -81,5 +75,6 @@
     </article>
 </div>
 
+<script type="module" src="../global.js"></script>
 </body>
 </html>
