--- a/contact/index.html
+++ b/contact/index.html
@@ -7,29 +7,19 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <nav>
-        <a href="../index.html" >Home</a>
-        <a href="../projects/">Projects</a>
-        <a href="../contact/" class="current">Contact</a>
-        <a href="../cv/">CV</a>
-        <a href="https://github.com/sulovewai19" target="_blank">GitHub</a>
-    </nav>
+  <h1>Contact</h1>
+  <p>You can reach me at <a href="mailto:lwai@ucsd.edu">lwai@ucsd.edu</a></p>
 
-<h1>Contact</h1>
-<p>You can reach me at <a href="mailto:lwai@ucsd.edu">lwai@ucsd.edu</a></p>
+  <form action="mailto:lwai@ucsd.edu" method="GET">
+    <label for="subject">Subject:</label>
+    <input id="subject" name="subject" placeholder="Subject" required>
 
-<form action="mailto:lwai@ucsd.edu" method="POST" enctype="text/plain">
-  <label for="email">Email:</label>
-  <input id="email" type="email" name="email" placeholder="Enter your email" required>
+    <label for="body">Message:</label>
+    <textarea id="body" name="body" placeholder="Write your message" rows="4" required></textarea>
 
-  <label for="subject">Subject:</label>
-  <input id="subject" name="subject" placeholder="Subject" required>
+    <button type="submit">Send</button>
+  </form>
 
-  <label for="body">Body:</label>
-  <textarea id="body" name="body" placeholder="Write your message" rows="4" required></textarea>
-
-  <button type="submit">Send</button>
-</form>
-
+  <script type="module" src="../global.js"></script>
 </body>
 </html>
