--- a/cv/index.html
+++ b/cv/index.html
@@ -7,13 +7,6 @@
   <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <nav>
-    <a href="../index.html">Home</a> 
-    <a href="../projects/">Projects</a> 
-    <a href="../contact/">Contact</a> 
-    <a href="../cv/" class="current">CV  </a> 
-    <a href="https://github.com/sulovewai19" target="_blank">GitHub</a>
-  </nav>
 
   <header>
     <h1>Su Love Wai</h1>
@@ -98,5 +91,6 @@
     </ul>
   </section>
 
+  <script type="module" src="../global.js"></script>
 </body>
 </html>
