--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Su Love Wai: Personal site and portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-   <script type="module" src="../global.js"></script>
+
    <h1>Su Love Wai</h1>
    <p>I’m Su Love Wai, a UC San Diego student majoring in Data Science with a minor in Finance. I’m interested in data-driven projects that connect business and technology.</p>
    <img src="images/myphoto.jpg" alt="Portrait of Su Love Wai" style="width:300px; border-radius:10px;">
-    
+
+   <script type="module" src="global.js"></script>
 </body>
 </html>
