Lab 4 JSON changes

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
    <p>I’m Su Love Wai, a UC San Diego student majoring in Data Science with a minor in Finance. I’m interested in data-driven projects that connect business and technology.</p>
    <img src="images/myphoto.jpg" alt="Portrait of Su Love Wai" style="width:300px; border-radius:10px;">
 
+   <h2>Latest Projects</h2>
+<div class="latest-projects"></div>
+
+<h2>My GitHub Stats</h2>
+<div id="profile-stats"></div>
+
+
+
+
    <script type="module" src="global.js"></script>
+   <script type="module" src="./index.js"></script>
 </body>
 </html>
+
