--- a/projects/index.html
+++ b/projects/index.html
@@ -1,80 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Projects - Su Love Wai</title>
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
-  
 
-  <h1>Projects</h1>
-<p>Here you will find some of my projects in data science, finance, and web development.</p>
+  <h1 class="projects-title">Projects (<span id="project-count"></span>)</h1>
+  <p>Here you will find some of my projects in data science, finance, and web development.</p>
 
-<div class="projects">
-    <article>
-        <h2>Lorem ipsum dolor sit.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ut eius atque accusantium rerum, dolorum dolor! Excepturi ullam consequatur molestiae ab, esse tenetur, adipisci, omnis laboriosam delectus corporis velit itaque quia!</p>
-    </article>
-    <article>
-        <h2>Hic unde quam nam?</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Iure, quia reiciendis! Numquam iste porro tempore nam, hic saepe reiciendis quas nobis a quaerat alias, tempora optio. Odit incidunt suscipit hic nihil amet dolorem distinctio velit est debitis magnam!</p>
-    </article>
-    <article>
-        <h2>Eum repudiandae quas delectus.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Dolorem voluptates corrupti minima, mollitia deleniti esse at illo quo qui ipsam, sint officiis molestias ratione veniam, laboriosam itaque fugiat vero exercitationem maiores natus. Deserunt aut exercitationem nemo veniam fugit?</p>
-    </article>
-    <article>
-        <h2>Culpa eius dignissimos blanditiis?</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Nesciunt, omnis minus ad assumenda eos in ab itaque, quod nulla laborum qui at. Voluptate tempore tempora sed porro sapiente temporibus numquam aliquid excepturi culpa ipsa? Veniam rem deleniti accusamus.</p>
-    </article>
-    <article>
-        <h2>Dolorum quas sequi nostrum.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Sit quasi sunt tempora modi dolores aliquam autem nobis esse distinctio adipisci delectus a nemo, ullam, qui quos id ea veniam amet inventore deserunt, quaerat suscipit voluptatibus excepturi accusantium. Veniam!</p>
-    </article>
-    <article>
-        <h2>Provident velit nulla repellendus.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Quaerat nisi laborum hic? Officia quaerat, amet sit reiciendis nesciunt, accusamus sint quidem, minima dolor ipsam ullam quam ipsa. Itaque laboriosam corrupti explicabo culpa nisi, neque at minima dolorum provident.</p>
-    </article>
-    <article>
-        <h2>Porro quam iste repudiandae.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Perferendis asperiores ducimus rerum earum recusandae, iste eaque iusto sunt nostrum sequi laudantium molestias nisi consequuntur inventore hic dolor voluptatibus a! Illo doloremque provident veritatis beatae libero enim, ea cupiditate!</p>
-    </article>
-    <article>
-        <h2>Accusamus quia perferendis odit.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Facere, officiis deleniti. Commodi soluta quo voluptas enim quia quaerat voluptates ipsa voluptatem cum sapiente similique assumenda iusto temporibus sunt id dolore ducimus expedita iste, consequuntur, possimus consequatur voluptatum nisi.</p>
-    </article>
-    <article>
-        <h2>Minus eveniet tenetur recusandae!</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Est quasi corrupti, adipisci perspiciatis laborum exercitationem laboriosam ab hic suscipit, rerum necessitatibus doloremque labore facere quibusdam soluta minima molestiae quam consequatur illo cumque vel excepturi tenetur vitae. Reprehenderit, accusantium.</p>
-    </article>
-    <article>
-        <h2>Expedita, obcaecati. Aut, accusantium.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Quos nisi eveniet, dolorum beatae eum aspernatur odit exercitationem natus distinctio quidem aliquid. Facere mollitia saepe laborum quas doloremque. Et obcaecati impedit dignissimos temporibus accusamus sint dicta nam qui dolore?</p>
-    </article>
-    <article>
-        <h2>Molestiae architecto eos accusantium.</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>A excepturi quidem consectetur veritatis molestias optio voluptates nostrum, natus eveniet ad corporis, provident aliquid reprehenderit expedita quasi rem quis possimus nesciunt aspernatur? Laudantium asperiores, sed consequuntur accusantium unde error!</p>
-    </article>
-    <article>
-        <h2>Fugiat libero et inventore?</h2>
-        <img src="https://vis-society.github.io/labs/2/images/empty.svg" alt="">
-        <p>Aliquam omnis quasi rem consequuntur porro possimus maxime animi quas quisquam commodi, incidunt fugiat corporis laboriosam numquam amet facilis sint nemo, in neque odit accusantium? Eligendi, quas laborum! Pariatur, laborum!</p>
-    </article>
-</div>
+  <div class="projects"></div>
 
-<script type="module" src="../global.js"></script>
+  <script type="module" src="../global.js"></script>
+  <script type="module" src="projects.js"></script>
 </body>
 </html>
