--- a/projects/index.html
+++ b/projects/index.html
@@ -9,10 +9,16 @@
 <body>
 
   <h1 class="projects-title">Projects (<span id="project-count"></span>)</h1>
-  <p>Here you will find some of my projects in data science, finance, and web development.</p>
+<p>Here you will find some of my projects in data science, finance, and web development.</p>
 
-  <div class="projects"></div>
+<div class="container">
+  <svg id="projects-pie-plot" viewBox="-50 -50 100 100"></svg>
+  <ul class="legend"></ul>
+</div>
 
+<div class="projects"></div>
+
+  <!-- Scripts -->
   <script type="module" src="../global.js"></script>
   <script type="module" src="projects.js"></script>
 </body>
